content/media/sass/_resume.scss
@import "compass/utilities/general/clearfix";
@import "960/grid";
@import "_typography";

$ninesixty-columns: 12;
$ninesixty-gutter-width: 15px;
$ninesixty-grid-width: 640px;

@font-face {
    font-family: 'LeagueGothicRegular';
    src: url('/media/type/League_Gothic-webfont.eot');
    src: url('/media/type/League_Gothic-webfont.eot?#iefix') format('embedded-opentype'),
         url('/media/type/League_Gothic-webfont.woff') format('woff'),
         url('/media/type/League_Gothic-webfont.ttf') format('truetype'),
         url('/media/type/League_Gothic-webfont.svg#LeagueGothicRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

#resume {
  font-family: $serif;

  h1, h2, h3, h4, h5 {
    font-family: $sans-serif;
    font-weight: normal;
    letter-spacing: 4px;
    text-transform: uppercase;
  }

  h1 {
    font-family: 'LeagueGothicRegular', $sans-serif;
    font-size: 6em;
    letter-spacing: 2px;
    height: 30px;
    margin: 50px 0;
    text-align: center;
  }
  h2 { font-size: 1.8em; }
  h3 { font-size: 1.5em; }
  h4 { font-size: 1.3em; }
  h5 { font-size: 1.2em; }

  #header-container { display: none; }

  #content-container #content {
    width: 640px;
    padding: 20px 0 0 0;

    #outline {
      @include pie-clearfix;

      text-align: center;
      margin-bottom: 20px;
      font-family: $sans-serif;
      font-size: 12px;
      letter-spacing: 1px;
      text-transform: uppercase;

      ul {
        text-align: center;
        margin: 0;
        padding: 0;
      }

      li {
        display: inline;
        margin: 0;
        padding: 0;
        margin-left: 8px;

        &:before {
          content: "|";
          margin-right: 8px;
        }

        &.first {
          margin-left: 0;
          &:before { content: ''; }
        }
      }
    }

    hr { clear: both; margin: 30px 0; }

    > section { @include grid(12); }
    #info, #contact {
      @include grid(6);
      table { width: 100%; }
    }

    .introduction {
      font-size: 1.3em;
      line-height: 1.5em;
    }

    #experience {
      @include pie-clearfix;
      #technologies { @include grid(6); @include alpha; }
      #references { @include grid(6); @include omega; }
      table { width: 100%; }
    }

    #education {
      @include pie-clearfix;
      .results table { width: 100%; }
      #a-levels { @include grid(6); @include alpha; }
      #sat { @include grid(6); @include omega; }
    }

    #conclusion {
      font-size: 2em;
      line-height: 1.5em;
      margin: 30px 0;
    }
  }
}

